# aoc

./: flake.nix
2024/: Cargo.toml
2024/src/: day1.rs  day2.rs  day3.rs  main.rs
