[package]
name = "aoc2024"
version = "0.1.0"
edition = "2024"

[dependencies]

[lints.rust]
unsafe_code = "forbid"

[lints.clippy]
enum_glob_use = "deny"
pedantic = { level = "deny", priority = -1 }
nursery = { level = "deny", priority = -1 }
unwrap_used = "deny"

[profile.release]
lto = "fat"
codegen-units = 1
strip = "symbols"
panic = "abort"

